@@ -1,5 +1,10 @@
 2011-02-01  Richard Guenther  <rguenther@suse.de>
 
+	PR tree-optimization/47555
+	* gcc.dg/pr47555.c: New testcase.
+
+2011-02-01  Richard Guenther  <rguenther@suse.de>
+
 	PR tree-optimization/47541
 	* g++.dg/torture/pr47541.C: New testcase.
 
